--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,12 @@
 <body>
     <script src="./src/main.js" type="module"></script>
     <div class="topBox"> 
-        <button onclick="runRegenerate()">Simulate</button>
+        <button onclick="Simulate()">Simulate</button>
         Number of Processes:<input type="text" id="randomGenerated" placeholder="Type something here..." />
+        <select id="algoSelect">
+            <option value="FCFS">First Come First Serve (FCFS)</option>
+            <option value="RR">Round Robin (RR)</option>
+        </select>
     </div>
     <div class="midBox"> 
 
@@ -20,9 +24,6 @@
         </div>
         <div class="column2">
             <pre class="result" id="result2"></pre>
-        </div>
-        <div class="column3">
-            <pre class="result" id="result3"></pre>
         </div>
     </div>
 </body>
