Cleaned up Made legend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,11 @@
         </select>
     </div>
     <div class="midBox"> 
-
+        <p class="color-new">New</p>
+        <p class="color-waiting">Waiting</p>
+        <p class="color-ready">Ready</p>
+        <p class="color-running">Running</p>
+        <p class="color-terminated">Terminated</p>
     </div>
     <div class="columns">
         <div class="column1">
