--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
     <div class="topBox"> 
         <button onclick="Simulate()">Simulate</button>
         Number of Processes : <input type="text" style="font-size: 18px; padding: 10px; height: 5px; width: 183px;" id="randomGenerated" placeholder="Type something here..." />
+        <select id="algoSelect">
+            <option value="FCFS">First Come First Serve (FCFS)</option>
+            <option value="RR">Round Robin (RR)</option>
+        </select>
     </div>
     <div class="midBox"> 
    <p class="color-new">New</p>
