added regenerate button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <script src="./src/main.js" type="module"></script>
     <div class="topBox"> 
         <button onclick="Simulate()">Simulate</button>
+        <button onclick="Regenerate()">Regenerate</button>
         Number of Processes : <input type="text" style="font-size: 18px; padding: 10px; height: 5px; width: 183px;" id="randomGenerated" placeholder="Type something here..." />
         <select id="algoSelect">
             <option value="FCFS">First Come First Serve (FCFS)</option>
