a few formatting changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,9 @@
         <button onclick="Simulate()">Simulate</button>
         <button onclick="Regenerate()">Regenerate</button>
         <br>
-        Number of Processes : <input type="text" style="font-size: 18px; padding: 10px; height: 5px; width: 183px;" id="randomGenerated" placeholder="Type something here..." />
+        Number of Processes: <input type="text" style="font-size: 18px; padding: 10px; height: 5px; width: 183px;" id="randomGenerated" placeholder="Type something here..." />
         <br>
+        Algorithm:
         <select id="algoSelect">
             <option value="FCFS">First Come First Serve (FCFS)</option>
             <option value="RR">Round Robin (RR)</option>
